<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="thiagocury.eti.br.arduinobluetooth.TelaSobre">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:background="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:text="@string/so_nomeapp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_margin="@dimen/esp_img"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/texto"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/so_versao"
        android:id="@+id/textView3"
        android:layout_margin="@dimen/esp_img"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/texto"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/so_data"
        android:id="@+id/textView5"
        android:layout_margin="@dimen/esp_img"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="@dimen/texto"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/so_desenvolvedor"
        android:id="@+id/textView4"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_margin="@dimen/esp_img"
        android:textColor="@color/black"
        android:textSize="@dimen/texto"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/so_site"
        android:id="@+id/textView6"
        android:layout_margin="@dimen/esp_img"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/texto"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/imageView2"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@drawable/logo_colorido"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</android.support.constraint.ConstraintLayout>
